# vikes-match-clock

./: .envrc  .eslintignore  .eslintrc.js  .firebaserc  .gitignore  .importjs.js  .lambci.json  .npmrc  .travis.yml  AGENTS.md  CI_FAILURES.md  FIX_CI_EMULATOR.md  Makefile  NEXT_STEPS.md  README.md  build.sh  check-master.sh  cloudformation.sh  codecov.yml  cypress.config.ts  cypress.json  docker-compose.yml  firebase-rules.json  firebase.json  ksi-openapi.json  match-clock-template.json  node_modules.tar.gz.REMOVED.git-id  opencode.json  package-lock.json  package.json  package.sh  pnpm-lock.yaml  pull-request-description.md  pyproject.toml  pyrightconfig.json  requirements.txt  rm-gz-ext.sh  storage.rules  vikes-match-clock.sublime-project  vikes-match-clock.sublime-workspace
.sisyphus/: boulder.json
admin/: .envrc  app.vue  nuxt.config.ts  package.json  pnpm-lock.yaml
api/: make-zips.sh  update.py
clock/: .eslintignore  .eslintrc.js  .prettierignore  AGENTS.md  eslint.config.mjs  index.html  openapi-ts.config.ts  package.json  playwright.config.ts  pnpm-lock.yaml  testing-strategy-plan.md  tsconfig.build.json  tsconfig.json  vite.config.ts  vitest.config.ts
clock-api/: Makefile  samconfig.toml  template.yaml
functions/: package-lock.json  package.json  pnpm-lock.yaml
infra/: .terraform.lock.hcl  AGENTS.md  api.tf  frontend.tf  iam.tf  main.tf
kiosk/: .gitignore
kiosk/src-tauri/: Cargo.toml  tauri.conf.json
kiosk/src-tauri/capabilities/: default.json
kiosk/src-tauri/src/: lib.rs  main.rs
public/: index.html
scripts/: deploy-prod.sh
src/: App.css  (+19 more)
(+516 files in other folders)
